applied security patch

--- a/project.cfg
+++ b/project.cfg
@@ -35,7 +35,7 @@ eggs +=
     ploomcake.core
     ploomcake.theme
     ploomcake.installer
-
+    Products.PloneHotfix20121106==1.2
 
 # Only for products not released on pypi (src/*)
 develop +=
